--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "markdown-it": "^11.0.0",
     "markdown-it-anchor": "^5.3.0",
     "markdown-it-attrs": "^3.0.3",
+    "markdown-it-deflist": "^2.0.3",
     "markdown-it-header-sections": "^1.0.0",
     "markdown-it-table-of-contents": "^0.4.4",
     "nunjucks": "^3.2.2",
