--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-header-sections": "^1.0.0",
     "markdown-it-table-of-contents": "^0.4.4",
+    "moment": "^2.28.0",
     "nunjucks": "^3.2.2",
     "slugify": "^1.4.5"
   }
