--- a/src/package.json
+++ b/src/package.json
@@ -14,13 +14,14 @@
     "@11ty/eleventy": "^0.11.0",
     "gulp": "^4.0.2",
     "gulp-pretty-html": "^2.0.10",
+    "html-entities": "^1.3.1",
     "markdown-it": "^11.0.0",
     "markdown-it-anchor": "^5.3.0",
     "markdown-it-attrs": "^3.0.3",
     "markdown-it-deflist": "^2.0.3",
+    "markdown-it-div": "^1.1.0",
     "markdown-it-header-sections": "^1.0.0",
     "markdown-it-table-of-contents": "^0.4.4",
-    "moment": "^2.28.0",
     "nunjucks": "^3.2.2",
     "slugify": "^1.4.5"
   }
