New source documents for SyncMediaLite
Spec, use cases, explainer

--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -8,8 +8,9 @@
     "serve": "cross-env DEBUG=Eleventy* eleventy --serve",
     "serve-https": "cross-env HTTPS=true DEBUG=Eleventy* eleventy --serve",
     "build": "npm run clean && eleventy",
-    "clean": "rimraf docs/smil && rimraf docs/synclite && rimraf docs/index.html",
-    "http-serve": "cd ../docs && http-serve"
+    "clean": "rimraf docs",
+    "http-serve": "cd ../docs && http-serve",
+    "dev": "npm run clean && npm run serve"
   },
   "keywords": [],
   "author": "",
